// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalContainer /> snapshot should match snapshot 1`] = `
<ModalContainer>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with arrow 1`] = `
<ModalContainer
  showArrow={true}
>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
  >
    <div
      className="md-modal-container-arrow-wrapper"
      data-popper-arrow={true}
      id="arrow"
    >
      <ModalArrow
        color="primary"
      >
        <svg
          className="md-modal-arrow-svg"
          data-placement="bottom"
          height={12}
          viewBox="0 0 24 12"
          width={24}
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clipPath
              id="modal-arrow-cut-stroke-bottom"
            >
              <path
                d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
              />
            </clipPath>
          </defs>
          <path
            clipPath="url(#modal-arrow-cut-stroke-bottom)"
            d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            data-color="primary"
          />
        </svg>
      </ModalArrow>
    </div>
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with children 1`] = `
<ModalContainer>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
  >
    <div>
      Example Text
    </div>
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with className 1`] = `
<ModalContainer
  className="example-class"
>
  <div
    className="example-class md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with color 1`] = `
<ModalContainer
  color="quaternary"
>
  <div
    className="md-modal-container-wrapper"
    data-color="quaternary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with elevation 1`] = `
<ModalContainer
  elevation={8}
>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={8}
    data-padded={false}
    data-round={0}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with id 1`] = `
<ModalContainer
  id="example-id"
>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    id="example-id"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with isPadded 1`] = `
<ModalContainer
  isPadded={true}
>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={true}
    data-round={0}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with radius 1`] = `
<ModalContainer
  round={150}
>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={150}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with style 1`] = `
<ModalContainer
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    style={
      Object {
        "color": "pink",
      }
    }
  />
</ModalContainer>
`;
